# truck_dat295

./: README.md
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: GulliViewPositions.msg  Intersection_Action.msg  TruckState.msg  V2I.msg
src/custom_msgs/srv/: RequestPath.srv
src/gulliview_server/: CMakeLists.txt  LICENSE.TXT  package.xml
src/gulliview_server/scripts/: gatherdata.py  gulliview_server.cpp
src/path_planning/: CMakeLists.txt  package.xml
src/path_planning/scripts/: error_calc.py  helper_functions.py  model.py  pathPlanning.py  path_planning_node.py  plot.py  recalculatePath.py  track_checker.py  vehicleState.py
src/section_identifier/: CMakeLists.txt  package.xml
src/section_identifier/scripts/: helper_functions.py  section_identifier.py
src/section_lock/: CMakeLists.txt  package.xml
src/section_lock/scripts/: section_lock.py
src/truck_automatic_ctrl/: CMakeLists.txt  package.xml
src/truck_automatic_ctrl/scripts/: auto_master.py  error_calc.py  errorsmoothie.py  geometry.py  pid.py  pid_test.py  sim.py
src/truck_manual_ctrl/: CMakeLists.txt  gamepad.launch  package.xml
src/truck_manual_ctrl/scripts/: controls.py  (+3 more)
src/truck_map/: .gitignore  CMakeLists.txt  package.xml
src/truck_map/scripts/: example_graph.txt  graph.txt  graph_func.py  graphpoints.py  map_func.py  obstacle_node.py  ref_path.py  ref_path_gui.py  shortest_path.py
src/truck_master/: master.launch
src/truck_visualization/: CMakeLists.txt  README.md  config.rviz  package.xml  vision.launch
src/zookeeper/: .gitignore  .project  build.gradle
(+4 files in other folders)
